Closed Bug 186054 Opened 23 years ago Closed 23 years ago

JavaScript (JS) doesn't appear to be disabled

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Brade, Assigned: Brade)

References

()

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

If I open this page in Composer and mouse over the text, I see popups caused by JS: http://jmreymond.free.fr/tommy/jobsbody.html
-->jfrancis for now
Assignee: syd → jfrancis
Component: Editor: Composer → Editor: Core
Blocks: 187456
-->brade
Assignee: jfrancis → brade
Attached patch patch to disable plugins and JS (obsolete) — Splinter Review
Attachment #111056 - Attachment is obsolete: true
That looks like the right approach. We should try to fix the issue where JS event handlers don't get disabled, as well.
Ignore my last comment. Event handlers were fixed in bug 121171.
Attachment #111085 - Flags: superreview?(kin)
Attachment #111085 - Flags: review?(sfraser)
Comment on attachment 111085 [details] [diff] [review] disable JS and plugins when a window is made editable This looks ok to me, do we want to check the return value of the SetScriptsEnabled() call? Or are you avoiding that on purpose?
Attachment #111085 - Flags: superreview?(kin) → superreview+
Attachment #111085 - Flags: review?(sfraser) → review+
fix checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: