bug 186054 and others; disable JS and plugins in Composer (r=smfr, sr=kin)